Wed Mar  5 18:05:27 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepoServ.cpp:

          Fixed parsing of -ReassociateDelay argument.

Wed Feb 26 04:43:44 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * java/idl2jni/codegen/im_jni.cpp:

          Added coverage for typedef-of-string fields in unions.

        * java/idl2jni/tests/simple/simple.idl:

          Regression test for the above.

Mon Jan 27 21:24:53 UTC 2014  Mike Martinez  <martinez_m@ociweb.com>

        * ChangeLog:
        * NEWS:
        * README:
        * docs/history/ChangeLog-3.5:

        Setup for next version.


Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: